fix some styling issues with splash and header button alignment

--- a/src/css/components/checkout/checkout.styl
+++ b/src/css/components/checkout/checkout.styl
@@ -485,12 +485,12 @@ button[type=submit]
 @media screen and (max-width: 980px)
   .checkout-button
     right: 20px
-    top:21px
+    top:18px
 
   .video
     left: 80px !important
     right: initial
-    margin-top: -14px !important
+    margin-top: -18px !important
 
 // Loader Stuff
 .loader
