--- a/src/css/components/splash.styl
+++ b/src/css/components/splash.styl
@@ -274,6 +274,7 @@ form
   register
     display: table
     margin: auto
+    max-width: 100vw
 
     form
       & > user-email
@@ -286,3 +287,7 @@ form
     .error
       position: absolute
       margin: 10px 5px
+      max-width: 100vw
+
+  .login-button
+    max-width: 100vw
